--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,11 @@ dependencies:
   equatable: ^2.0.5
   flutter_bloc: ^8.1.3
   shimmer_animation: ^2.1.0+1
+  hive: ^2.2.3
+  firebase_core: ^2.24.0
+  firebase_auth: ^4.15.2
+  firebase_ui_auth: ^1.11.0
+  cloud_firestore: ^4.13.5
 
 dev_dependencies:
   flutter_test:
